@@ -1,3 +1,10 @@
+Wed Feb 26 22:55:43 1997  David H. Hovemeyer <Hovemeyer_D@mediasoft.net>
+			  and Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* scc.c (SccGetVersion): Return the version number of the SCC
+	spec; we don't get to pick what to return here.
+	* README.txt: Update with current status.
+
 Sat Feb 15 15:19:41 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* Makefile.in: New file.
